# tg_stat_parser

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/: constants.py  main.py  parse.py  utils.py
