[project]
name = "telegram-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "selenium>=4.28.1",
    "setuptools>=75.8.0",
    "undetected-chromedriver>=3.5.5",
]
